Fixed text spacing/line height

--- a/styles/about-contact.css
+++ b/styles/about-contact.css
@@ -9,6 +9,7 @@ header h1, header h2 {
 
 header h3 {
   color: #fff;
+  line-height: 2.25rem;
   margin: 0 10%;
   max-width: 50%;
 }
@@ -60,6 +61,7 @@ header h3 {
 
   .mobile-intro {
     display: block;
+    line-height: 2.25rem;
     margin: 1.5rem auto;
     max-width: 80%;
   }
@@ -78,11 +80,13 @@ header h3 {
 }
 
 #quote {
+  line-height: 2.25rem;
   padding-top: 1rem;
 }
 
 #leo h3 {
   color: rgba(0,0,0,0.40);
+  padding-top: 0.5rem;
 }
 
 /* tools & tech image */
@@ -106,6 +110,7 @@ header h3 {
 
 /* about-container styles */
 .about-container h3 {
+  line-height: 2.25rem;
   margin-bottom: 1rem;
   margin-top: 2rem;
 }
@@ -147,6 +152,7 @@ header h3 {
   grid-area: outside-design;
   text-align: center;
 }
+
 .quote-block {
   grid-area: quote-block;
   margin: 3rem auto;
@@ -156,6 +162,7 @@ header h3 {
 .quote-block h4 {
   color: rgba(0,0,0,0.75);
   font-size: 1.25rem;
+  line-height: 2.5rem;
 }
 
 /* places .about-container into one column for mobile/tablets */
