--- a/styles/landing.css
+++ b/styles/landing.css
@@ -36,6 +36,10 @@ h1, h2 {
     max-width: 90%;
   }
 
+  h1, h2 {
+    line-height: 2.25rem;
+  }
+
   .changing-word {
     display: none;
   }
